--- a/calculators/nac.html
+++ b/calculators/nac.html
@@ -18,7 +18,7 @@
         </div>
         <div class="header-text">
             <h1>HSgB Pharmacy Calculator</h1>
-            <p>Pharmacy Oncall Survival Kit - Quick dosing calculator & guide for Hosp Sungai Buloh staff</p>
+            <p>On-Call Survival Kit for Pharmacists</p>
         </div>
     </div>
 </div>
@@ -118,7 +118,7 @@
                 📋 Clinical Notes Template
             </div>
             <div id="nac-clinical-notes" style="font-size: 0.9em; color: #1B5E20; white-space: pre-line; font-family: 'Courier New', monospace; background: white; padding: 12px; border-radius: 6px; margin-top: 8px; line-height: 1.6;"></div>
-            <button onclick="copyNotes()" style="margin-top: 12px; padding: 10px 18px; background: linear-gradient(135deg, #4CAF50 0%, #388E3C 100%); color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: 600; font-size: 0.95em; box-shadow: 0 2px 6px rgba(0,0,0,0.2);">
+            <button id="nac-copy-btn" onclick="copyNotes()" style="margin-top: 12px; padding: 10px 18px; background: linear-gradient(135deg, #4CAF50 0%, #388E3C 100%); color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: 600; font-size: 0.95em; box-shadow: 0 2px 6px rgba(0,0,0,0.2);">
                 📋 Copy to Notes
             </button>
         </div>
