--- a/calculators/pcm-toxicity.html
+++ b/calculators/pcm-toxicity.html
@@ -47,7 +47,7 @@
 
 <div style="font-size: 0.85em; color: #555; background-color: #f5f5f5; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); max-width: 900px; width: 90%; margin: 20px auto; padding: 15px;">
     <p><span style="font-weight: 600;">Prepared by:</span> Izyana Munirah Idham (AMS Pharmacist), Hospital Sungai Buloh.<br>
-    <span style="font-weight: 600;">In collaboration with:</span> Hannah Md Mahir & Fong Siew Li (AMS Pharmacists) & PRIC.<br>
+    <span style="font-weight: 600;">In collaboration with:</span> AMS Pharmacy Team, PRIC, JK IT & Digital (Pharmacy Dept, HSgB)<br>
     <span style="font-weight: 600;">Launched:</span> Mar 2026.</p>
     <p style="font-weight: 700;">For Hosp Sungai Buloh Staff Use Only.</p>
     <p style="font-size: 0.95em; margin-top: 10px;">
